--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -26,7 +26,7 @@ Login
 
         <div class="checkbox mb-3">
             <label>
-                <input type="checkbox" value="remember-me"> Remember me
+                <a href="{% url 'password_reset' %}">Forgot Password?</a>
             </label>
         </div>
         <button class="btn btn-lg btn-primary btn-block rounded-pill" type="submit">Log In</button>
