--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -27,7 +27,8 @@ Profile | {{ user.username }}
                 </div>
                 <div class="tab-pane fade" id="edit-profile" role="tabpanel" aria-labelledby="edit-profile-tab">
                     <!--edit the user details  -->
-                    <form action="{% url 'update' user.id %}">
+                    <form action="{% url 'update' user.id %}" method="POST">
+                        {% csrf_token %}
                         <div class="form-label-group">
                             <input type="text" id="username" name="username" class="form-control" placeholder="Username"
                                 required value="{{ user.username }}">
@@ -45,18 +46,18 @@ Profile | {{ user.username }}
                     <!-- list of the books added by the user -->
                     <ul class="list-group list-group-flush">
                         {% for book in books %}
-                            <li class="list-group-item">
-                                <div class="media">
-                                    <img src="{{ book.image.url }}" class="mr-3" width="80px" alt="...">
-                                    <div class="media-body">
-                                        <a class="mt-0" href="{% url 'books-detail' book.pk %}">{{ book.name }}</a> <br>
-                                        <a href="{% url 'books-delete' book.pk %}"
-                                            class="btn btn-sm btn-outline-danger rounded-pill mt-3">Delete</a>
-                                        <a href="{% url 'books-update' book.pk %}"
-                                            class="btn btn-sm btn-outline-info rounded-pill mt-3">Update</a>
-                                    </div>
+                        <li class="list-group-item">
+                            <div class="media">
+                                <img src="{{ book.image.url }}" class="mr-3" width="80px" alt="...">
+                                <div class="media-body">
+                                    <a class="mt-0" href="{% url 'books-detail' book.pk %}">{{ book.name }}</a> <br>
+                                    <a href="{% url 'books-delete' book.pk %}"
+                                        class="btn btn-sm btn-outline-danger rounded-pill mt-3">Delete</a>
+                                    <a href="{% url 'books-update' book.pk %}"
+                                        class="btn btn-sm btn-outline-info rounded-pill mt-3">Update</a>
                                 </div>
-                            </li>
+                            </div>
+                        </li>
                         {% endfor %}
                     </ul>
                 </div>
@@ -64,22 +65,33 @@ Profile | {{ user.username }}
                     <!-- list of the book request done by the user -->
                     <ul class="list-group list-group-flush">
                         {% for user_request in user_requests %}
-                            <li class="list-group-item">
-                                <div class="media">
-                                    <img src="{{ user_request.requested_book.image.url }}" class="mr-3" width="80px"
-                                        alt="...">
-                                    <div class="media-body">
-                                        <p><span class="text-muted">Requested Book : </span>
-                                            {{ user_request.requested_book }}</p>
-                                        <p><span class="text-muted">Requested Trade : </span>
-                                            {{ user_request.requested_trade }}</p>
-                                        <a href="{% url 'books-request-delete' user_request.id %}"
-                                            class="btn btn-sm btn-outline-danger rounded-pill mt-1">Delete</a>
-                                        <a href="{% url 'books-request-update' user_request.id %}"
-                                            class="btn btn-sm btn-outline-info rounded-pill mt-1">Update</a>
-                                    </div>
+                        <li class="list-group-item">
+                            <div class="media">
+                                <img src="{{ user_request.requested_book.image.url }}" class="mr-3" width="80px"
+                                    alt="...">
+                                <div class="media-body">
+                                    <p><span class="text-muted">Requested Book : </span>
+                                        {{ user_request.requested_book }}</p>
+                                    <p><span class="text-muted">Requested Trade : </span>
+                                        {{ user_request.requested_trade }}</p>
+                                    {% if user_request.is_accepted == False and user_request.is_declined == False %}
+                                    <small class="text-danger"><span class="text-muted">Request Status : </span>
+                                        Pending</small><br>
+                                    <a href="{% url 'books-request-update' user_request.id %}"
+                                        class="btn btn-sm btn-outline-info rounded-pill mt-2">Update</a>
+                                    {% elif user_request.is_declined == True %}
+                                    <small class="text-danger"><span class="text-muted">Request Status : </span>
+                                        Rejected
+                                    </small><br>
+                                    {% else %}
+                                    <small class="text-info"><span class="text-muted">Request Status : </span> Accepted
+                                    </small><br>
+                                    {% endif %}
+                                    <a href="{% url 'books-request-delete' user_request.id %}"
+                                        class="btn btn-sm btn-outline-danger rounded-pill mt-2">Delete</a>
                                 </div>
-                            </li>
+                            </div>
+                        </li>
                         {% endfor %}
                     </ul>
                 </div>
