--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -4,23 +4,16 @@
     Reset Password
 {% endblock title %}
 {% block content %}
-    <form class="form-signin pt-5" method="POST">
-    {% csrf_token %}
-        <div class="text-center mb-4">
-            <h1 class="h3 mb-3 font-weight-normal">Reset Password</h1>
-            <p>
-                Reset your password here
-            </p>
-        </div>
-        
-        <div class="form-group text-center">
-        New Password:
-            {{ form.new_password1 }}
-        </div>
-        <div class="form-group text-center">
-        Confirm Password:
-            {{ form.new_password1 }}
-        </div>
-        <button class="btn btn-md btn-primary btn-block rounded-pill" type="submit">Reset</button>
-    </form>
-{% endblock %}
+    <div class="content-section form-signin">
+        <form method="POST">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Reset Password</legend>
+                {{ form }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-primary rounded-pill" type="submit">Reset Password</button>
+            </div>
+        </form>
+    </div>
+{% endblock content %}
